--- a/components/PastSpeakers/PastSpeakers.scss
+++ b/components/PastSpeakers/PastSpeakers.scss
@@ -82,7 +82,23 @@ body {
   padding: 20px;
   color: white;
   font-family: "Open Sans", sans-serif;
+  color: #FFF;
+
+text-align: center;
+font-family: "Open Sans";
+font-size: 15px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
 }
+.sayer{
+  color: var(--blue-fill, #8BABFE);
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 15px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: normal;}
 
 .viewAllButton {
   background-color: #85A4F3;
