--- a/components/Sponsors/Sponsors.scss
+++ b/components/Sponsors/Sponsors.scss
@@ -1,152 +1,124 @@
-.Sponsors {
-  display: grid;
-  place-items: center;
-  align-content: center;
-  background-color: black;
-  height: 42rem;
+.sponsor-carousel {
+  background-color: #4a90e2;
+  width: 100%;
+  padding: 40px 20px;
+  border-radius: 10px;
+  box-sizing: border-box; /* Include padding in width */
+  overflow: hidden; /* Hide overflow if necessary */
+}
 
-  .line-1-child {
-    align-self: stretch;
-    box-sizing: border-box;
-    /* height: 0.3rem; */
+.sponsor-carousel__title {
+  color: white;
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 30px;
+}
+
+.sponsor-carousel__wrapper {
+  width: 100%;
+  overflow: hidden; /* Hide overflow if necessary */
+}
+
+.sponsor-carousel__container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto; /* Center the container */
+  box-sizing: border-box; /* Include padding in width */
+}
+
+.slick-slider {
+  .slick-list {
+    width: 100%;
   }
 
-  .line-1 {
-    width: 2.25rem;
-    display: flex;
-    margin-top: 2rem;
-  }
-
-  .line-2 {
-    width: 5.25rem;
-    display: flex;
+  .slick-slide {
+    padding: 0;
+    
+    > div {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   .slick-dots {
-    bottom: 80px;
+    bottom: -30px;
 
     li {
       button:before {
         font-size: 12px;
-        color: #c7751e;
+        color: white;
       }
 
       &.slick-active button:before {
-        color: #fff;
+        color: #ff9900;
       }
     }
   }
+}
 
-  display: flex;
-  align-items: center;
+.sponsor-carousel__item {
+  display: flex !important;
   justify-content: center;
-  margin: -2rem 0;
-  width: 100%;
-
-  &__content {
-    border-radius: 1.1875rem;
-    font-style: normal;
-    font-weight: 400;
-    transition: 0.3s ease-in-out;
-
-    &:hover {
-      background: #8babfe;
-    }
-
-    @include respondAt(915px) {
-      /* Add responsive styles here if needed */
-    }
-  }
-
-  &--cards__image {
-    max-width: 60%;
-    margin: 0 auto;
-  }
-
-  margin-top: 1.5rem;
-  margin-bottom: 3rem;
-
-  .slick-slider {
-    .slick-prev,
-    .slick-next {
-      width: 30px;
-      height: 30px;
-
-      &:before {
-        font-size: 30px;
-      }
-    }
-
-    .slick-dots {
-      bottom: 60px;
-    }
-
-    &--cards__image {
-      max-width: 70%;
-      margin: 0 auto;
-    }
-  }
-
-  &--heading {
-    font-size: 3rem;
-  }
-
-  .slick-slider {
-    .slick-prev,
-    .slick-next {
-      bottom: 40px;
-    }
-
-    &--cards__image {
-      max-width: 75%;
-      margin: 0 auto;
-    }
-  }
-
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-
-  .slick-slider {
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
-
-    .slick-slide {
-      padding: 0 5px;
-    }
-
-    .slick-dots {
-      bottom: 20px;
-
-      li {
-        button:before {
-          font-size: 10px;
-        }
-      }
-    }
-  }
-
-  &--cards__image {
-    max-width: 25%;
-    padding-top: 0.5rem;
-  }
-
-  &--button {
-    margin: 1.5rem 0;
+  align-items: center;
+  
+  img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid white;
   }
 }
 
-@media (max-width: 360px) {
-  .Sponsors__past {
-    &--cards__image {
-      max-width: 25%;
+
+@media (max-width: 1200px) {
+  .sponsor-carousel {
+    &__item {
+      img {
+        width: 130px;
+        height: 130px;
+      }
     }
   }
 }
 
-@media (max-width: 320px) {
-  .Sponsors__past {
-    &--cards__image {
-      max-width: 18%;
+@media (max-width: 992px) {
+  .sponsor-carousel {
+    &__item {
+      img {
+        width: 120px;
+        height: 120px;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .sponsor-carousel {
+    &__title {
+      font-size: 2rem;
+    }
+
+    &__item {
+      img {
+        width: 110px;
+        height: 110px;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .sponsor-carousel {
+    &__title {
+      font-size: 1.8rem;
+    }
+
+    &__item {
+      img {
+        width: 100px;
+        height: 100px;
+      }
     }
   }
 }
